# carlover

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: config.py  main.py
app/agents/: __init__.py  adac_agent.py  answer_agent.py  image_agent.py  orchestrator_agent.py  sandbox_agent.py  supabase_agent.py
app/api/: deps.py
app/api/routes/: chat.py  debug.py  health.py  image.py  vehicle.py
app/evaluation/: evaluation_service.py
app/graph/: graph.py  nodes.py  state.py
app/mcp/: __init__.py  adapters.py  example_server.py  registry.py
app/providers/adac/: base.py  mock_provider.py  real_provider.py
app/providers/daytona/: client.py
app/providers/llm/: base.py  featherless_client.py  model_router.py
app/providers/supabase/: client.py  repository.py
app/schemas/: agent_outputs.py  common.py  image_outputs.py  requests.py  responses.py
app/services/: car_detection.py
app/skills/: answer_style.md  diagnosis.md  loader.py  routing_rules.md  vehicle_lookup.md
app/utils/: vehicle_normalizer.py
data/: gold_answers.jsonl
docs/: architecture.md  daytona_overview.html  loveable_adac_integration.md  pitch.html
frontend/: index.html
scripts/: deploy_daytona.py  run_eval.py  seed_demo_data.py  smoke_test.py
supabase/: config.toml  schema.sql  seed.sql
supabase/functions/adac-proxy/: index.ts
tests/: conftest.py  test_adac_agent.py  test_chat_flow.py  test_graph_routing.py  test_health.py  test_image_detection.py  test_image_flow.py  test_supabase_agent.py
